--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -232,30 +232,25 @@
 
 							<nav class="footer__list">
 								<a href="#">About Us</a>
-								<a href="#">Catalog</a>
-								<a href="#">News</a>
+							
 								<a href="#">Help Center</a>
 							
 							</nav>
 						</div>
 
 						<div class="footer__nav footer__nav--2">
-							<div class="footer__title"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M467.51,248.83c-18.4-83.18-45.69-136.24-89.43-149.17A91.5,91.5,0,0,0,352,96c-26.89,0-48.11,16-96,16s-69.15-16-96-16a99.09,99.09,0,0,0-27.2,3.66C89,112.59,61.94,165.7,43.33,248.83c-19,84.91-15.56,152,21.58,164.88,26,9,49.25-9.61,71.27-37,25-31.2,55.79-40.8,119.82-40.8s93.62,9.6,118.66,40.8c22,27.41,46.11,45.79,71.42,37.16C487.1,399.86,486.52,334.74,467.51,248.83Z' style='fill:none;stroke-miterlimit:10;stroke-width:32px'/><circle cx='292' cy='224' r='20'/><path d='M336,288a20,20,0,1,1,20-19.95A20,20,0,0,1,336,288Z'/><circle cx='336' cy='180' r='20'/><circle cx='380' cy='224' r='20'/><line x1='160' y1='176' x2='160' y2='272' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='208' y1='224' x2='112' y2='224' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg> <span>Games</span></div>
+							<div class="footer__title"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M467.51,248.83c-18.4-83.18-45.69-136.24-89.43-149.17A91.5,91.5,0,0,0,352,96c-26.89,0-48.11,16-96,16s-69.15-16-96-16a99.09,99.09,0,0,0-27.2,3.66C89,112.59,61.94,165.7,43.33,248.83c-19,84.91-15.56,152,21.58,164.88,26,9,49.25-9.61,71.27-37,25-31.2,55.79-40.8,119.82-40.8s93.62,9.6,118.66,40.8c22,27.41,46.11,45.79,71.42,37.16C487.1,399.86,486.52,334.74,467.51,248.83Z' style='fill:none;stroke-miterlimit:10;stroke-width:32px'/><circle cx='292' cy='224' r='20'/><path d='M336,288a20,20,0,1,1,20-19.95A20,20,0,0,1,336,288Z'/><circle cx='336' cy='180' r='20'/><circle cx='380' cy='224' r='20'/><line x1='160' y1='176' x2='160' y2='272' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/><line x1='208' y1='224' x2='112' y2='224' style='fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px'/></svg> <span>Categories</span></div>
 
 							<nav class="footer__list footer__list--double">
-								<a href="#">Dota 2</a>
-								<a href="#">StarCraft 2</a>
-								<a href="#">CS:GO</a>
-								<a href="#">League of Legends</a>
-								<a href="#">Battlegrounds</a>
+								<a href="#">PS5</a>
+								<a href="#">PS4</a>
+								
 							</nav>
 
 							<nav class="footer__list footer__list--double">
-								<a href="#">Call of Duty</a>
-								<a href="#">Hearthstone</a>
-								<a href="#">Halo</a>
-								<a href="#">Vainglory</a>
-								<a href="#">World of Tanks</a>
+								<a href="#">Nigeria Party Games</a>
+								<a href="#">Foreign Party Games</a>
+								
 							</nav>
 						</div>
 
@@ -267,11 +262,11 @@
 								<a href="#">Selling on Game On </a>
 								<a href="#">Terms and conditions</a>
 								<a href="#">Privacy policy</a>
-								<a href="#">Marketing Partnership</a>
+						
 							</nav>
 
 							<div class="footer__contacts">
-								<a class="footer__link" href="tel:+18092345678">+234 809 234-56-78</a>
+								<a class="footer__link" href="#">+234 809 234-56-78</a>
 								<a class="footer__link" href="mailto:support@gameon.com.ng">support@gameon.com.ng</a>
 								
 								<div class="footer__social">
