making fixes to user end

--- a/rentals/templates/rentals/rentalHome.html
+++ b/rentals/templates/rentals/rentalHome.html
@@ -380,8 +380,8 @@
 
 
 
-<!-- section -->
-<div class="section section--last">
+
+<!-- <div class="section section--last">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -413,8 +413,8 @@
             </div>
         </div>
     </div>
-</div>
-<!-- end section -->
+</div> -->
+
 
 
 {% endblock content %}
