--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -163,7 +163,7 @@ if (user != 'AnonymousUser'){
                 'last_name': null,
                 'email': null,
                 'phone': null,
-                'totla': total,
+                'total': total,
             }
 
             var shippingInfo = {
