--- a/shop/templates/shop/shopHome.html
+++ b/shop/templates/shop/shopHome.html
@@ -299,8 +299,8 @@
 
 {% endif %}
 
-<!-- section -->
-<div class="section section--last">
+
+<!-- <div class="section section--last">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -332,6 +332,9 @@
             </div>
         </div>
     </div>
-</div>
-<!-- end section -->
+</div> -->
+
+
+
+
 {% endblock content %}
