--- a/users/templates/account/password_reset.html
+++ b/users/templates/account/password_reset.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-	<div class="sign section--full-bg" data-bg="{% static 'img/bg2.jpg' %}">
+	<div class="sign section--full-bg" data-bg="{% static 'img/gameon_login_bg.jpg' %}">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
@@ -48,7 +48,14 @@
 
 							<div class="sign__group">
                                 <input autocomplete="off" type="email" name="email" class="sign__input" required id="id_email" placeholder="Enter your email address">
-                               
+								{% if form.email.errors %}
+                                        {% for error in form.email.errors %}
+                                        <div class="invalid">
+                                            <em class="icon ni ni-info-fill" data-toggle="tooltip" data-placement="right" title="{{ error|escape }}"></em>
+                                            <p style="color: red !important;">{{ error|escape }}</p>
+                                        </div>
+                                        {% endfor %}
+                                    {% endif %}
 							</div>
 
 							<button class="sign__btn" type="submit">Proceed</button>
