--- a/users/templates/account/password_reset_from_key.html
+++ b/users/templates/account/password_reset_from_key.html
@@ -28,73 +28,92 @@
 	<meta name="author" content="Game On">
 	<title>Game On| Change Password  </title>
 
+<style type="text/css">
+	.sign__group--eye  {
+	position: absolute;
+	top: 30%;
+	right: 5%;
+
+
+	cursor: pointer; 
+	color: whitesmoke;
+	}
+</style>
+
 </head>
 <body>
 
-	<div class="sign section--full-bg" data-bg="{% static 'img/bg2.jpg' %}">
+	<div class="sign section--full-bg" data-bg="{% static 'img/gameon_login_bg.jpg' %}">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
+					<span> {% if token_fail %}{% trans "Bad Token" %}{% endif %} </span>
+
+					{% if token_fail %}
+							{% url 'account_reset_password' as passwd_reset_url %}
+							<p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+					{% else %}
+							{% if form %} 
 					<div class="sign__content">
 						<!-- authorization form -->
-                        <span class="sign__text"> <a href="/"> Choose new password </a></span>
-                            <span> {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %} </span>
-
-                        {% if token_fail %}
-                                {% url 'account_reset_password' as passwd_reset_url %}
-                                <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-                                {% else %}
-                                {% if form %} 
-						<form action="{{ action_url }}" class="sign__form" method="POST" autocomplete="off">
-                            {% csrf_token %}
-							
-							<a href="/" class="sign__logo">
-								<img src="{% static 'img/logo_white.png' %}" alt="">
-							</a>
-
-							
-
-							<div class="sign__group">
-								
-                                <input autocomplete="off" type="password" name="password" class="sign__input" required id="id_password" placeholder="Enter new password">
-                                <div>
-                                    {% if form.password.errors %}
-                                        {% for error in form.password.errors %}
-                                        <div class="nk-kycfm-note">
-                                            <em class="icon ni ni-info-fill" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></em>
-                                            <p style="color: red !important;">{{ error|escape }}</p>
-                                        </div>
-                                        {% endfor %}
-                                    {% endif %}
-                                    </div>
-							</div>
-
-                            <div class="sign__group">
-								
-                                <input autocomplete="off" type="password" name="password2" class="sign__input" required id="id_password2" placeholder="Enter new password again">
-                                <div>
-                                    {% if form.password2.errors %}
-                                        {% for error in form.password2.errors %}
-                                        <div class="nk-kycfm-note">
-                                            <em class="icon ni ni-info-fill" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></em>
-                                            <p style="color: red !important;">{{ error|escape }}</p>
-                                        </div>
-                                        {% endfor %}
-                                    {% endif %}
-                                    </div>
-							</div>
+                        
                            
-							
-							<button class="sign__btn" type="submit">Continue</button>
-  
-						</form>
-				
-                        {% else %}
-                                <p>{% trans 'Your password is now changed.' %}</p>
-                                {% endif %}
-                                {% endif %}
+								
+								<form action="{{ action_url }}" class="sign__form" method="POST" autocomplete="off">
+									{% csrf_token %}
+									
+									<a href="/" class="sign__logo">
+										<img src="{% static 'img/logo_white.png' %}" alt="">
+									</a>
+
+									
+									<span class="sign__text"> <a href="#"> Choose new password </a></span> <br>
+									<br>
+									<div class="sign__group">
+										
+										<input autocomplete="off" type="password" name="password1" class="sign__input" required id="id_password1" placeholder="Enter new password">
+										<ion-icon  name="eye-outline" class="sign__group--eye" onclick="toggleViewPassword1()" ></ion-icon>
+										<div>
+											{% if form.password1.errors %}
+												{% for error in form.password1.errors %}
+												<div class="nk-kycfm-note">
+													<em class="icon ni ni-info-fill" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></em>
+													<p style="color: red !important;">{{ error|escape }}</p>
+												</div>
+												{% endfor %}
+											{% endif %}
+											</div>
+									</div>
+
+									<div class="sign__group">
+										
+										<input autocomplete="off" type="password" name="password2" class="sign__input" required id="id_password2" placeholder="Enter new password again">
+										<ion-icon  name="eye-outline" class="sign__group--eye" onclick="toggleViewPassword2()" ></ion-icon>
+										<div>
+											{% if form.password2.errors %}
+												{% for error in form.password2.errors %}
+												<div class="nk-kycfm-note">
+													<em class="icon ni ni-info-fill" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></em>
+													<p style="color: red !important;">{{ error|escape }}</p>
+												</div>
+												{% endfor %}
+											{% endif %}
+											</div>
+									</div>
+								
+									
+									<button class="sign__btn" type="submit">Continue</button>
+		
+								</form>
+						
+                       
 
 					</div>
+
+					{% else %}
+					<p>{% trans 'Your password is now changed.' %}</p>
+					{% endif %}
+					{% endif %}
 				</div>
 			</div>
 		</div>
@@ -109,6 +128,31 @@
 	<script src="{% static 'js/jquery.mousewheel.min.js' %}"></script>
 	<script src="{% static 'js/jquery.mCustomScrollbar.min.js' %}"></script>
 	<script src="{% static 'js/user_main.js' %}"></script>
+
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+	<script type="text/javascript">
+		function toggleViewPassword1() {
+			var x = document.getElementById("id_password1");
+			if (x.type === "password") {
+				x.type = "text";
+			} else {
+				x.type = "password";
+			}
+		}
+
+		function toggleViewPassword2() {
+			var x = document.getElementById("id_password2");
+			if (x.type === "password") {
+				x.type = "text";
+			} else {
+				x.type = "password";
+			}
+		}
+
+	</script>
+
 </body>
 </html>
 
