--- a/rentals/templates/events/new_rental_order_admin.html
+++ b/rentals/templates/events/new_rental_order_admin.html
@@ -3,7 +3,7 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Gear Has Arrived</title>
+    <title> New Rental Order </title>
     <style>
       .btn:hover {
         background-color: #000 !important;
@@ -242,7 +242,7 @@
                                   </tr>
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmImageContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 0px 9px 0;" align="center">
-                                      <h1 style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important;">YOUR ORDER<br />IS ON THE WAY</h1>
+                                      <h1 style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important;">NEW RENTAL <br />ORDER</h1>
                                     </td>
                                   </tr>
                                 </tbody>
@@ -256,7 +256,7 @@
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; color: #000; font-size: 14px; line-height: 130%; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; padding: 0px 18px 10px;" align="center">
                                       <p style="padding-bottom: 0px; max-width: 375px; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; margin: 0 auto;" align="center">
-                                        <span style="font-size: 16px; line-height: 1.5; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">Your purchase order has been received and being processed!</span>
+                                        <span style="font-size: 16px; line-height: 1.5; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {{email}} just made a new rental order, See details below!</span>
                                       </p>
                                     </td>
                                   </tr>
@@ -271,16 +271,16 @@
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;">Ordered Date</h2>
-                                      <span style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">{{order.ordered_date}}</span>
+                                      <span style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">{{que.ordered_date}}</span>
                                     </td>
                                   </tr>
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;">Shipping Address</h2>
-                                      <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {{order.user.first_name}} {{order.user.last_name}} <br/>
-                                                        {{order.shipping_address.apartment_address}} <br/>
-                                                        {{order.shipping_address.street_address}}, {{order.shipping_address.city}}<br/>
-                                                        {{order.shipping_address.state}} </span>
+                                      <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {{que.user.first_name}} {{que.user.last_name}} <br/>
+                                                        {{que.shipping_address.apartment_address}} <br/>
+                                                        {{que.shipping_address.street_address}}, {{que.shipping_address.city}}<br/>
+                                                        {{que.shipping_address.state}} </span>
                                     </td>
                                   </tr>
                                  
@@ -288,7 +288,7 @@
                                   <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h4 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 14px; margin-bottom: 8px; margin-top: 35px;">Order number</h4>
-                                      <span style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">{{order.ref_code}}</span><br />
+                                      <span style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">{{que.ref_code}}</span><br />
                                     </td>
                                   </tr>
                                 </tbody>
@@ -304,8 +304,8 @@
                                       <h2 style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px;">Order Summary</h2>
                                     </td>
                                   </tr>
-                                  {% if order_items %}
-                                  {% for val in order_items %}
+                                  {% if que_items %}
+                                  {% for val in que_items %}
                                   <tr class="kmTableRow" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                     <td valign="top" class="kmTextContent" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; padding-bottom: 15px; padding-top: 15px; border-bottom-width: 1px; border-bottom-color: #717171; border-bottom-style: solid; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0;">
@@ -350,17 +350,17 @@
                                         <tbody>
                                           <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                             <td class="total-item-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; width: 100%; padding: 0 15px 0 0;" align="right">Subtotal</td>
-                                            <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{order_item_total}} </td>
+                                            <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{que_item_total}} </td>
                                           </tr>
                                          
                                           <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                             <td class="total-item-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300; width: 100%; padding: 0 15px 0 0;" align="right">Shipping</td>
-                                            <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{order.shipping_fee}}</td>
+                                            <td style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">₦{{que.shipping_fee}}</td>
                                           </tr>
                                           
                                           <tr style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                             <td class="total-item-title" style="font-weight: 600; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; width: 100%; padding: 0 15px 0 0;" align="right">Total</td>
-                                            <td style="font-weight: 600; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important;">₦{{order.get_total}}</td>
+                                            <td style="font-weight: 600; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important;">₦{{que.get_total}}</td>
                                           </tr>
                                         </tbody>
                                       </table>
