--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -27,6 +27,18 @@
 	<meta name="author" content="Game On">
 	<title>Game On| Login </title>
 
+<style type="text/css">
+	.sign__group--eye  {
+	position: absolute;
+	top: 30%;
+	right: 5%;
+
+
+	cursor: pointer; 
+	color: whitesmoke;
+	}
+</style>
+
 </head>
 <body>
 
@@ -58,8 +70,8 @@
 							</div>
 
 							<div class="sign__group">
-								
                                 <input autocomplete="off" type="password" name="password" class="sign__input" required id="id_password" placeholder="Enter your password">
+								<ion-icon  name="eye-outline" class="sign__group--eye" onclick="toggleViewPassword()" ></ion-icon>
                                 <div>
                                     {% if form.password.errors %}
                                         {% for error in form.password.errors %}
@@ -69,7 +81,7 @@
                                         </div>
                                         {% endfor %}
                                     {% endif %}
-                                    </div>
+                                </div>
 							</div>
                             {% if redirect_field_value %}
                             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
@@ -125,6 +137,22 @@
 	<script src="{% static 'js/jquery.mousewheel.min.js' %}"></script>
 	<script src="{% static 'js/jquery.mCustomScrollbar.min.js' %}"></script>
 	<script src="{% static 'js/user_main.js' %}"></script>
+
+
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+	<script type="text/javascript">
+		function toggleViewPassword() {
+			var x = document.getElementById("id_password");
+			if (x.type === "password") {
+				x.type = "text";
+			} else {
+				x.type = "password";
+			}
+			}
+
+	</script>
 </body>
 </html>
 
