--- a/users/templates/account/password_reset_done.html
+++ b/users/templates/account/password_reset_done.html
@@ -1,13 +1,4 @@
 
-
-
-
-
-
-
-
-
-
 {% load static %}
 {% load i18n %}
 {% load account socialaccount %}
@@ -40,7 +31,7 @@
 </head>
 <body>
  
-    <div class="page-404 section--full-bg" data-bg="{% static 'img/bg2.jpg' %}">
+    <div class="page-404 section--full-bg" data-bg="{% static 'img/gameon_login_bg.jpg' %}">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
