--- a/users/templates/account/password_reset_from_key_done.html
+++ b/users/templates/account/password_reset_from_key_done.html
@@ -1,159 +1,72 @@
+
+
 {% load static %}
 {% load i18n %}
-{% load account %}
+{% load account socialaccount %}
+      
 <!DOCTYPE html>
-<html lang="zxx" class="js">
-
+<html lang="en">
 <head>
-  
-    <meta charset="utf-8">
-    <meta name="author" content="SurveyBay">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Survey Bay">
-    <!-- Fav Icon  -->
-    <link rel="shortcut icon" href="{% static 'images/logo/favicon.png' %}">
-    <!-- Page Title  -->
-    <title>Reset Password Done | SurveyBay </title>
-    <!-- StyleSheets  -->
-    <link rel="stylesheet" href="{% static 'assets/css/user_dashlite.css' %}?ver=2.8.0">
-    <link id="skin-default" rel="stylesheet" href="{% static 'assets/css/theme.css' %}?ver=2.8.0">
-    <style type="text/css">
-        .btn-primary{
-          
-          background-color: #1c2b46 !important; 
-          border-color: #1c2b46 !important;
-        }
-        .btn-primary:hover{
-          background-color: #ffa021 !important;
-          border-color: #ffa021 !important; 
-  
-        }
-       
-        #logo_mobile{
-            display: none;
-        }
-        @media (max-width: 576px){
-                #logo_mobile{
-                    display: block;
-            }
-        }
-      </style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+	<link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+	<link rel="stylesheet" href="{% static 'css/nouislider.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/paymentfont.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/user_main.css' %}">
+
+	<!-- Favicons -->
+	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}" sizes="32x32">
+	<link rel="apple-touch-icon" href="{% static 'img/icon.png' %}">
+
+	<meta name="description" content="Games and Fun marketplace by Game On">
+	<meta name="keywords" content="">
+	<meta name="author" content="Game On">
+	<title>Game On| Reset Password </title>
+
 </head>
-
-
-
-
-<body class="nk-body bg-white npc-general pg-auth">
-    <div class="nk-app-root">
-        <!-- main @s -->
-        <div class="nk-main ">
-            <!-- wrap @s -->
-            <div class="nk-wrap nk-wrap-nosidebar">
-                <!-- content @s -->
-                <div class="nk-content ">
-                    <div class="nk-split nk-split-page nk-split-md">
-
-                        <div class="nk-split-content nk-split-stretch bg-lighter d-flex toggle-break-lg toggle-slide toggle-slide-right" data-content="athPromo" data-toggle-screen="lg" data-toggle-overlay="true">
-                            <div class="slider-wrap w-100 w-max-550px p-3 p-sm-5 m-auto">
-                              <div class="brand-logo pb-5">
-                                <a href="#" class="logo-link">
-                                    <img class="logo-light logo-img logo-img-md" src="{% static 'images/logo/full_black.png' %}" srcset="{% static 'images/logo/full_black.png' %} 2x" alt="logo" >
-                                    <img class="logo-dark logo-img logo-img-md" src="{% static 'images/logo/full_black.png' %}" srcset="{% static 'images/logo/full_black.png' %} 2x" alt="logo-dark" >
-                                </a>
-                              </div>
-                                <div class="slider-init" data-slick='{"dots":true, "arrows":false}'>
-                                    <div class="slider-item">
-                                        <div class="nk-feature nk-feature-center">
-                                            <div class="nk-feature-img">
-                                                <img class="round" src="{% static 'images/slides/promo-a.png' %}" srcset="{% static 'images/slides/promo-a2x.png' %} 2x" alt="">
-                                            </div>
-                                            <div class="nk-feature-content py-4 p-sm-5">
-                                                <h4>Dashlite</h4>
-                                                <p>You can start to create your products easily with its user-friendly design & most completed responsive layout.</p>
-                                            </div>
-                                        </div>
-                                    </div><!-- .slider-item -->
-                                    <div class="slider-item">
-                                        <div class="nk-feature nk-feature-center">
-                                            <div class="nk-feature-img">
-                                                <img class="round" src="./images/slides/promo-b.png" srcset="./images/slides/promo-b2x.png 2x" alt="">
-                                            </div>
-                                            <div class="nk-feature-content py-4 p-sm-5">
-                                                <h4>Dashlite</h4>
-                                                <p>You can start to create your products easily with its user-friendly design & most completed responsive layout.</p>
-                                            </div>
-                                        </div>
-                                    </div><!-- .slider-item -->
-                                    <div class="slider-item">
-                                        <div class="nk-feature nk-feature-center">
-                                            <div class="nk-feature-img">
-                                                <img class="round" src="./images/slides/promo-c.png" srcset="./images/slides/promo-c2x.png 2x" alt="">
-                                            </div>
-                                            <div class="nk-feature-content py-4 p-sm-5">
-                                                <h4>Dashlite</h4>
-                                                <p>You can start to create your products easily with its user-friendly design & most completed responsive layout.</p>
-                                            </div>
-                                        </div>
-                                    </div><!-- .slider-item -->
-                                </div><!-- .slider-init -->
-                                <div class="slider-dots"></div>
-                                <div class="slider-arrows"></div>
-                            </div><!-- .slider-wrap -->
-                        </div><!-- nk-split-content -->
-
-                        <div class="nk-split-content nk-block-area nk-block-area-column nk-auth-container bg-white w-lg-45">
-                          <div class="absolute-top-right d-lg-none p-3 p-sm-5">
-                              <a href="#" class="toggle btn btn-white btn-icon btn-light" data-target="athPromo"><em class="icon ni ni-info"></em></a>
-                          </div>
-                          <div class="nk-block nk-block-middle nk-auth-body">
-                              <div id="logo_mobile" class="brand-logo pb-5">
-                                    <a href="#" class="logo-link">
-                                        <img class="logo-light logo-img logo-img-md" src="{% static 'images/logo/full_black.png' %}" srcset="{% static 'images/logo/full_black.png' %} 2x" alt="logo" >
-                                        <img class="logo-dark logo-img logo-img-md" src="{% static 'images/logo/full_black.png' %}" srcset="{% static 'images/logo/full_black.png' %} 2x" alt="logo-dark" >
-                                    </a>
-                              </div>
-                              <div class="nk-block-head">
-                                  <div class="nk-block-head-content">
-                                      <h5 class="nk-block-title">Password Reset Successful</h5>
-                                      {% if user.is_authenticated %}
+<body>
+ 
+    <div class="page-404 section--full-bg" data-bg="{% static 'img/gameon_login_bg.jpg' %}">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="page-404__wrap">
+						<div class="page-404__content">
+                            <h5 class="nk-block-title">Password Reset Successful</h5>
+                                        {% if user.is_authenticated %}
                                         {% include "account/snippets/already_logged_in.html" %}
                                         {% endif %}
-                                        <div class="nk-block-des">
-                                            <p> {% trans 'Your password is now changed.' %}</p>
-                                        </div>
-                                  </div>
-                                  <div class="form-note-s2 pt-5">
-                                    <a  class="btn btn-lg btn-primary btn-block" href="{% url 'account_login' %}"><strong>Return to login</strong></a>
-                                </div>
-                              </div>
-                           
-                          
-                              
-                          </div><!-- .nk-block -->
-                          <div class="nk-block nk-auth-footer">
-                             
-                              <div class="mt-3">
-                                <p>&copy; <script>document.write(new Date().getFullYear())</script> SurveyBay.</p>
-                              </div>
-                          </div>
-                      </div>
+							<p class="page-404__text">{% trans 'Your password is now changed.' %}</p>
+							<a href="/" class="page-404__btn">go back</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-
-                    </div><!-- nk-split -->
-                </div>
-                <!-- wrap @e -->
-            </div>
-            <!-- content @e -->
-        </div>
-        <!-- main @e -->
-    </div>
-    <!-- app-root @e -->
-    <!-- JavaScript -->
-    <script src="{% static 'assets/js/bundle.js' %}?ver=2.8.0"></script>
-    <script src="{% static 'assets/js/scripts.js' %}?ver=2.8.0"></script>
-  
-
+	<script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+	<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+	<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+	<script src="{% static 'js/wNumb.js' %}"></script>
+	<script src="{% static 'js/nouislider.min.js' %}"></script>
+	<script src="{% static 'js/jquery.mousewheel.min.js' %}"></script>
+	<script src="{% static 'js/jquery.mCustomScrollbar.min.js' %}"></script>
+	<script src="{% static 'js/user_main.js' %}"></script>
+</body>
 </html>
+
+
+
+
+
 
 
 
