--- a/users/templates/events/admin_prompt.html
+++ b/users/templates/events/admin_prompt.html
@@ -1,10 +1,8 @@
 
-{% load account %}
-{% user_display user as user_display %}
-{% load i18n %}
+
 
 <head><style type="text/css" title="x-apple-mail-formatting"></style>
-    <title>GameOn</title>
+    <title>Gameon</title>
     <meta name="viewport" content="width = 375, initial-scale = -1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="x-apple-disable-message-reformatting">
@@ -40,7 +38,7 @@
 </head>
 <body marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0" bgcolor="#FFFFFF" style="margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;-webkit-text-size-adjust:none">
 	<div style="display:none;font-size:1px;color:#FFFFFF;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden">
-						<p>Reset Your Password</p>
+						<p>KYC Submitted</p>
 		    </div>
 	  <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#FFFFFF" class="fullwidth">
       <tbody><tr>
@@ -50,7 +48,7 @@
         	<tbody><tr>
           		<td style="padding:30px 30px 20px 0px" class="masthead padded">
 
-				  <a href="#" style="color:#e4b83a;text-decoration:none;display:block;float:left" id="logo"><img src="https://shola-public-files.s3.amazonaws.com/logo.png" width="100"  style="-ms-interpolation-mode:bicubic;display:block;border:none" class="hide_on_mobile"> <img src="https://shola-public-files.s3.amazonaws.com/logo.png" class="show_on_mobile" width="60" style="display:none"></a>
+				  <a href="#" style="color:#e4b83a;text-decoration:none;display:block;float:left" id="logo"><img src="https://shola-public-files.s3.amazonaws.com/logo.png" width="150"  style="-ms-interpolation-mode:bicubic;display:block;border:none" class="hide_on_mobile"> <img src="https://shola-public-files.s3.amazonaws.com/logo.png" class="show_on_mobile" width="60" style="display:none"></a>
 
               </td>
             </tr>
@@ -65,34 +63,16 @@
 
 							<table border="0" cellpadding="0" cellspacing="0" width="100%" class="fullwidth" style="border-bottom:1px solid #e7e7e7">
 							<tbody><tr>
-								<td style="padding:20px 0;text-align:left;font-weight:500;font-size:24px;color:#343333" class="avenir" mc:edit="title">Hi {{ username }},</td>
+								<td style="padding:20px 0;text-align:left;font-weight:500;font-size:24px;color:#343333" class="avenir" mc:edit="title"> New KYC Document submitted </td>
 							  </tr>
 							  <tr>
 								<td style="padding:0 80px 0 0;font-size:18px;line-height:167%;font-weight:400;color:#343333" mc:edit="copy 1">
-																						<p>You recently requested to reset your Gameon account password. Click the button below to proceed</p>
+																						<p> {{first_name}} {{last_name}} with email {{email}} just submitted {{doc_type}}. Kindly login to admin to approve/reject  💪</p>
 																		 </td>
 							  </tr>
-							  <tr>
-								<td style="padding:30px 0 60px 0" mc:edit="button">
-
 							
-									<div align="left">
-										<a data-qa="verification_link" href="{{ password_reset_url }}" style="text-decoration:none;color:#FFFFFF;background-color:#343333;display:inline-block;padding:15px 20px;margin:auto;border:2px solid #343333;border-radius:3px;font-size:18px;font-weight:500" class="button">
-																							Reset Password 
-																					</a>
-									</div>
-									<!--[if mso]></td></tr></table><![endif]-->
-
-								</td>
-							</tr>
 							</tbody></table>
 
-							<table border="0" cellpadding="0" cellspacing="0" width="100%" class="fullwidth">
-							<tbody><tr>
-								<td style="padding:20px 80px 0 0;font-size:16px;line-height:167%;font-weight:400;color:#343333" mc:edit="copy 2">
-									<p> Didn’t make this request?  Just ignore this message.								</p></td>
-							</tr>
-							</tbody></table>
 
 						</td>
 					</tr>
