--- a/users/templates/events/welcome_email.html
+++ b/users/templates/events/welcome_email.html
@@ -447,7 +447,7 @@
                               <tr>
                                 <td align="center" style="font-size: 0px;padding: 0px;border-collapse: collapse;">
                                   <div style="font-family:Lato, Helvetica, sans;font-size:15px;line-height:24px;text-align:center;color:#545465;">
-                                    <p style="display: block;margin: 13px 0;">We are pleased to welcome you to the largest community of Gamers in the continent.<br>Your account is almost set up. Go to your profile to upload your KYC documents to enjoy full benefits<br><br>
+                                    <p style="display: block;margin: 13px 0;">We are pleased to welcome you to the largest community of Gamers in Nigeria.<br>Your account is almost set up. Go to your profile to upload your KYC documents to enjoy full benefits<br><br>
                                     <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                                       <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align: top;border-collapse: collapse;" width="100%">
                                         <tr>
