--- a/rentals/templates/rentals/about_us.html
+++ b/rentals/templates/rentals/about_us.html
@@ -14,7 +14,7 @@
 					<div class="col-12">
 						<!-- article content -->
 						<div class="article__content article__content--page">
-							<img src="{% static 'img/posts/about.jpg' %}" alt="">
+							<img src="{% static 'img/abt_us.jpg' %}" alt="">
 
 							<h1>About Us</h1>
 
