--- a/rentals/templates/events/new_rental_order_admin.html
+++ b/rentals/templates/events/new_rental_order_admin.html
@@ -278,8 +278,8 @@
                                     <td class="kmTextContent" valign="top" style="border-collapse: collapse; mso-table-lspace: 0; mso-table-rspace: 0; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;">
                                       <h2 class="shipping-details-title" style="font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 700 !important; text-transform: uppercase; line-height: normal !important; font-size: 22px; margin-bottom: 8px; margin-top: 35px;">Shipping Address</h2>
                                       <span style="text-transform: uppercase; font-family: &#39;Work Sans&#39;, Verdana, sans-serif !important; font-weight: 300;"> {{que.user.first_name}} {{que.user.last_name}} <br/>
-                                                        {{que.shipping_address.apartment_address}} <br/>
-                                                        {{que.shipping_address.street_address}}, {{que.shipping_address.city}}<br/>
+                                                        {{que.shipping_address.street_address}} <br/>
+                                                        {{que.shipping_address.city}}<br/>
                                                         {{que.shipping_address.state}} </span>
                                     </td>
                                   </tr>
