--- a/shop/templates/shop/payment.html
+++ b/shop/templates/shop/payment.html
@@ -52,7 +52,7 @@
                                 </div>
                                 <br>
                                 
-                                <button style="text-align: center;" class="form__btn" onclick= "payWithPaystack()" type="button">Proceed </button>
+                                <button  class="form__btn" onclick= "payWithPaystack()" type="button">Proceed </button>
                              
 
                             </div>
