--- a/users/templates/account/signup.html
+++ b/users/templates/account/signup.html
@@ -88,7 +88,7 @@
 
 							<div class="sign__group sign__group--checkbox">
 								<input class="t_and_c" id="t_and_c" name="t_and_c" type="checkbox" >
-								<label for="t_and_c">I agree to the <a href="#">Privacy Policy</a></label>
+								<label for="t_and_c">I agree to the <a href="/privacy-and-policy">Privacy Policy</a></label>
 							</div>
 							
 							<button class="sign__btn" id="sb-btn" type="submit">Sign up</button>
