--- a/rentals/templates/rentals/payment.html
+++ b/rentals/templates/rentals/payment.html
@@ -52,7 +52,7 @@
                                 </div>
 
                                 <br>
-                                <button  class="form__btn" onclick= "payWithPaystack()" type="button">Proceed </button>
+                                <button  class="form__btn__payment" onclick= "payWithPaystack()" type="button">Proceed </button>
 
                             </div>
 
