--- a/rentals/templates/rentals/about_us.html
+++ b/rentals/templates/rentals/about_us.html
@@ -18,17 +18,17 @@
 
 							<h1>About Us</h1>
 
-							<p>Games are great for having fun, relaxing, bonding and exercising one’s mind. They can however be a strain on your wallet.</p>
+							<p>Games are great for having fun, relaxing, bonding and exercising one’s mind. They can however be a strain on your wallet. <br> Game On is a platform where individual gamers and groups can:</p>
 
-							<p>Game On is a platform where individual gamers and groups can:</p>
+						
 
                             <ul>
-                                <li>Rent video games and party games to play. 
+                                <li>Rent video games and party games to play. <br>
                                     (Why spend so much money on a game you’ll finish in one week or play at a games night for just a few hours?)  
-                                    </li>
-                                <li>Rent out their idle games to others to earn a passive income.
+                                    </li> <br>
+                                <li>Rent out their idle games to others to earn a passive income. <br>
                                     (Instead of your completed or idle games sitting on your shelf, why not have them generate income for you and bring joy to others?)
-                                     </li>
+                                     </li> <br>
                                 <li>Buy Games and Gaming related items</li>
                             </ul>
 
