--- a/users/templates/account/signup.html
+++ b/users/templates/account/signup.html
@@ -115,7 +115,7 @@
 	<script src="{% static 'js/jquery.mousewheel.min.js' %}"></script>
 	<script src="{% static 'js/jquery.mCustomScrollbar.min.js' %}"></script>
 	<script src="{% static 'js/user_main.js' %}"></script>
-    <script>
+    <!-- <script>
         $(function () {
             var t_and_c = $('.t_and_c');
             var sb_btn = $('#sb-btn');
@@ -125,7 +125,7 @@
                 }).trigger('change');
         
         });    
-    </script>
+    </script> -->
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
