--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -149,7 +149,7 @@
                         <p style="color: whitesmoke !important;"> Order Summary </p>
 						<input type="text"  class="form__input" value="Total: {{order.get_total}}" disabled>
 						
-						<span class="form__text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</span>
+						<span class="form__text">Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our privacy policy.</span>
 						<button type="submit" class="form__btn">>> Payment</button>
 					</div>
 
