--- a/rentals/templates/rentals/base.html
+++ b/rentals/templates/rentals/base.html
@@ -269,6 +269,7 @@
 								<a href="#">Selling on Game On </a> -->
 								<a href="/terms-and-conditions">Terms and conditions</a>
 								<a href="/privacy-and-policy">Privacy policy</a>
+								<a href="https://vendor.gameon.com.ng/accounts/signup" target="_blank">Sell on GameOn</a>
 						
 							</nav>
 
